# Writeups

./: .gitignore  .gitmodules  README.md
bi0sCTF2025/veiled_xor/: Makefile  README.md  boolean_solve.py  solve.c
smileyCTF2025/: .gitignore  pyproject.toml
smileyCTF2025/dna/: .gitattributes  .gitignore  Makefile  README.md  compare_unlucky.py  dump_ass.py  extract_constraint.py  find_unlucky_key.py  main.rev.py  main.rev0.py  np_solve.py  unlu.py  unlucky.disass  unluckyfuncs.py  vm.asm
smileyCTF2025/enough/: README.md  mt19937_z3.py  out.py  python_mt19937.py  solve_ctf.py
synacktiv-winter-challenge-2025/: README.md  elf_parser.py  mirror.py  quine.asm  quiny101.asm  quiny109.asm  quiny155.asm  quiny95.asm  quiny99.asm  symmetries.py
